отображение нескольких единиц оборудования

--- a/germax-frontend/src/templates/components/content-page-client-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.html
@@ -148,10 +148,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p>Équipement loué: <span id="equipementLoué"></span></p>
-				<p>Date de prise: <span id="dateDePrise"></span></p>
-				<p>Date de restitution: <span id="dateDeRestitution"></span></p>
-				<p>État du matériel rendu: <span id="etatDuMaterielRendu"></span></p>
+				<!-- Здесь будут отображаться карточки с арендой -->
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
