--- a/germax-frontend/src/templates/components/header/index.html
+++ b/germax-frontend/src/templates/components/header/index.html
@@ -1,3 +1,4 @@
+<header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	<div class="container-fluid">
 			<a class="navbar-brand" href="#">GERMALOC</a>
@@ -13,3 +14,4 @@
 			</div>
 	</div>
 </nav>
+</header>
