--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -20,6 +20,15 @@
 		</div>
 	</div>
 	<div class="col-md-9">
+		<div id="profileSection" style="display:none;">
+			<div id="profileGreeting"></div>
+			<div id="profileAvatarContainer">
+        <img id="profileAvatar" src="../../../utils/images/pexels-cocarinne-6446709.jpg" alt="User Avatar">
+        <div id="avatarPlaceholder">Téléchargez votre avatar</div>
+    </div>
+			<div id="divider"></div>
+			<div id="userNotifications"></div>
+		</div>
 		<!-- Содержимое для студентов и преподавателей -->
 		<div id="tabPlace"></div>
 		<div id="myLoans"></div>
