--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.css
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.css
@@ -141,7 +141,7 @@ header {
 #titleAddingOrders, #titleOrders, #listOrdersTitle, #titleOrdersRequest {
 	color: var(--quaternary-color);
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 }
 
 #orderForm, #equipmentAddingContainer {
@@ -244,4 +244,37 @@ header {
 	position: absolute;
 	left: 15px;
 	top: 90px;
+}
+
+#backArrowContainer {
+	position: relative;
+	top: 20px;
+	left: 20px;
+	z-index: 1000;
+}
+
+.back-arrow {
+	font-size: 30px;
+	color: var(--primary-color);
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	transition: color 0.3s ease;
+	background-color: var(--secondary-color);
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.back-arrow:hover {
+	color: var(--accent-color);
+	text-decoration: underline;
+}
+
+.back-arrow i {
+	margin-right: 5px;
+	transition: transform 0.3s ease;
+}
+
+.back-arrow:hover i {
+	transform: translateX(-5px);
 }
