--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -1,3 +1,4 @@
+<div id="backArrowContainer"></div>
 <div class="tab-pane fade show active" id="commandes-equipement" role="tabpanel"
 	aria-labelledby="commandes-equipement-link">
 	<!-- Заголовок Добавления оборудования для менеджера -->
