--- a/germax-frontend/src/templates/components/content-page-privacy-policy/index.html
+++ b/germax-frontend/src/templates/components/content-page-privacy-policy/index.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-	integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/3paNdF+ZlsHrya1voWQ0yE/fbfl2D3" crossorigin="anonymous">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#">GERMALOC</a>
@@ -15,11 +13,7 @@
 </nav>
 
 <div class="container mt-5">
-	<div class="row">
-		<div class="col-12">
-			<a class="btn btn-back" href="/"><i class="fas fa-arrow-left"></i> Home</a>
-		</div>
-	</div>
+	<div id="backArrowContainer"></div>
 	<h1>Politique de confidentialité</h1>
 	<section>
 		<h2>Collecte des informations</h2>
