--- a/germax-frontend/src/templates/components/header/index.html
+++ b/germax-frontend/src/templates/components/header/index.html
@@ -8,7 +8,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item">
-							<button class="btn btn-auth" onclick="location.href='auth.html'">Déconnexion</button>
+							<button class="btn btn-auth" id="logoutButton">Déconnexion</button>
 						</li>
 					</ul>
 			</div>
