--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -23,7 +23,7 @@
 		<div id="profileSection" style="display:none;">
 			<div id="profileGreeting"></div>
 			<div id="profileAvatarContainer">
-        <img id="profileAvatar" src="../../../utils/images/pexels-cocarinne-6446709.jpg" alt="User Avatar">
+        <img id="profileAvatar" alt="User Avatar">
         <div id="avatarPlaceholder">Téléchargez votre avatar</div>
     </div>
 			<div id="divider"></div>
