релизовал вывод оповещений по типам пользователей

--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.css
@@ -141,3 +141,46 @@ h1.mb-3 {
 .dropdown-toggle:hover::after {
 	color: white;
 }
+
+.btn-back {
+	color: #7E685A !important;
+	margin-top: 75px;
+	font-size: 1.5rem;
+	display: block;
+	position: absolute;
+	left: 15px;
+	top: 90px;
+}
+
+#backArrowContainer {
+	position: relative;
+	top: 20px;
+	left: 20px;
+	z-index: 1000;
+}
+
+.back-arrow {
+	font-size: 30px;
+	color: var(--primary-color);
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	transition: color 0.3s ease;
+	background-color: var(--secondary-color);
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.back-arrow:hover {
+	color: var(--accent-color);
+	text-decoration: underline;
+}
+
+.back-arrow i {
+	margin-right: 5px;
+	transition: transform 0.3s ease;
+}
+
+.back-arrow:hover i {
+	transform: translateX(-5px);
+}
