--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
+	<div id="backArrowContainer"></div>
 	<h1 class="mb-3">Gestion des réservations</h1>
-
 	<div class="mb-3">
 		<!-- Фильтры -->
 		<div class="row g-3">
