--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-	<h5 class="modal-title" id="fullScreenModalLabel">Поиск и Фильтрация Оборудования</h5>
+	<h5 class="custom-title" id="fullScreenModalLabel">Louez votre équipement</h5>
 	<form class="jumbotron mt-4">
 		<div class="input-group mb-3">
 			<input type="text" class="form-control" id="model-search" placeholder="Rechercher par modèle">
@@ -30,12 +30,12 @@
 			</div>
 		</div>
 	</form>
-	<div class="jumbotron mt-4">
+	<div class="custom-jumbotron mt-4">
 		<p class="lead">Vous n'avez pas trouvé ce dont vous avez besoin ?</p>
 		<hr class="my-4">
 		<p>Ici, vous pouvez rapidement et facilement envoyer une demande de location de l'équipement nécessaire au
 			gestionnaire de l'entrepôt.</p>
-		<a class="btn btn-primary btn-sm" id="request-button" href="#" data-bs-target="#requestNotFoundItemsModal">Aller au formulaire</a>
+		<a class="btn btn-primary btn-sm" id="request-button" href="#" data-bs-target="#requestNotFoundItemsModal">Soumettre une demande</a>
 	</div>
 </div>
 
@@ -119,7 +119,7 @@
 					</div>
 					<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-							<button type="submit" class="btn btn-primary" form="notFoundRequestForm">Envoyer la requête</button>
+							<button type="submit" class="btn btn-primary btn-lg" form="notFoundRequestForm">Envoyer la requête</button>
 					</div>
 			</div>
 	</div>
