--- a/germax-frontend/src/templates/components/content-page-orders/index.html
+++ b/germax-frontend/src/templates/components/content-page-orders/index.html
@@ -188,3 +188,17 @@
 		</div>
 	</div>
 </div>
+
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+			<div class="modal-content">
+					<div class="modal-header">
+							<h5 class="modal-title" id="editModalLabel">Modifier les données</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+							<!-- Форма для редактирования будет динамически добавлена сюда -->
+					</div>
+			</div>
+	</div>
+</div>
